# django-dev

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
first_django/: apps.py  tests.py  urls.py  views.py
