[tool.poetry]
name = "django-dev"
version = "0.1.0"
description = ""
authors = ["Youn <rndso15@naver.com>"]
readme = "README.md"
packages = [{include = "django_dev"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
